--- a/TPS.BlazorApp/TPS.BlazorApp.csproj
+++ b/TPS.BlazorApp/TPS.BlazorApp.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TPS.ClassLibrary\TPS.ClassLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
